@@ -41,6 +41,7 @@ DataDisplay::DataDisplay(QWidget *parent)
     , m_hexLeftOver(0)
     , m_displayHex(false)
     , m_displayCtrlCharacters(false)
+	, m_linebreakChars("\n")
     , m_previous_ended_with_nl(true)
 {
     setupTextFormats();
@@ -175,16 +176,21 @@ void DataDisplay::constructDisplayLine(const QByteArray &inData)
 
     for (int i = 0; i < inData.size(); i++) {
         unsigned int b = inData.at(i);
-        // print one newline for \r\n only
+		// print newline depending on m_linebreakChars
         if ((isprint(b)) || (b == '\n') || (b == '\r') || (b == '\t')) {
 
             if (b == '\r') {
                 if (m_displayCtrlCharacters)
                     line.data += QChar(0x240D);
+				if (m_linebreakChars.endsWith('\r')) {
+					line.data += '\n';
+				}
             } else if (b == '\n') {
                 if (m_displayCtrlCharacters)
                     line.data += QChar(0x240A);
-                line.data += '\n';
+				if (m_linebreakChars.endsWith('\n')) {
+					line.data += '\n';
+				}
                 Q_ASSERT(i != (inData.size()));
             } else if (b == '\t') {
                 if (m_displayCtrlCharacters)
@@ -284,8 +290,10 @@ void DataDisplay::setDisplayHex(bool displayHex)
  */
 void DataDisplay::setDisplayCtrlCharacters(bool displayCtrlCharacters)
 {
-    m_displayCtrlCharacters = displayCtrlCharacters;
+	m_displayCtrlCharacters = displayCtrlCharacters;
 }
+
+void DataDisplay::setLinebreakChars(const QString &chars) { m_linebreakChars = chars; }
 
 QTextDocument *DataDisplay::getTextDocument() { return m_dataDisplay->document(); }
 
